import statics